# txtshare_backend.rs

./: Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yaml  example.env  init.sql
.github/workflows/: rust.yml
proto/: account.proto  auth.proto  ping.proto  txt.proto
src/: main.rs
src/controllers/: account.rs  auth.rs  mod.rs  ping.rs  txt.rs
